--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./public/images/logo.jpg" type="image/jpeg">
+    <link rel="icon" href="./public/images/logo_hairClub_preview.png" type="image/jpeg">
     <!-- <meta name="theme-color" content="#ff0000"> Prueba un color más visible -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hair Salon</title>
