Añadir Google Tag Manager para seguimiento y análisis

--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="./public/images/logo_hairClub_preview.png" type="image/jpeg">
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XDH67XR2NQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-XDH67XR2NQ");
+    </script>
+
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      href="./public/images/logo_hairClub_preview.png"
+      type="image/jpeg"
+    />
     <!-- <meta name="theme-color" content="#ff0000"> Prueba un color más visible -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hair Salon</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-</body>
+  </body>
 </html>
